crates/parser/tests/parse/memory-malformed.snap
---
source: crates/parser/tests/parse.rs
---
ROOT@0..81
  MODULE@0..80
    L_PAREN@0..1 "("
    KEYWORD@1..7 "module"
    WHITESPACE@7..10 "\n  "
    MODULE_FIELD_MEMORY@10..18
      L_PAREN@10..11 "("
      KEYWORD@11..17 "memory"
      R_PAREN@17..18 ")"
    WHITESPACE@18..21 "\n  "
    MODULE_FIELD_MEMORY@21..32
      L_PAREN@21..22 "("
      KEYWORD@22..28 "memory"
      WHITESPACE@28..29 " "
      ERROR@29..31 "\"\""
      R_PAREN@31..32 ")"
    WHITESPACE@32..35 "\n  "
    MODULE_FIELD_MEMORY@35..46
      L_PAREN@35..36 "("
      KEYWORD@36..42 "memory"
      WHITESPACE@42..43 " "
      ERROR@43..44 "("
      ERROR@44..45 ")"
      R_PAREN@45..46 ")"
    WHITESPACE@46..49 "\n  "
    MODULE_FIELD_MEMORY@49..63
      L_PAREN@49..50 "("
      KEYWORD@50..56 "memory"
      WHITESPACE@56..57 " "
      MEMORY_TYPE@57..62
        ADDR_TYPE@57..60
          ERROR@57..60 "f32"
        WHITESPACE@60..61 " "
        LIMITS@61..62
          UNSIGNED_INT@61..62 "0"
      R_PAREN@62..63 ")"
    WHITESPACE@63..66 "\n  "
    MODULE_FIELD_MEMORY@66..78
      L_PAREN@66..67 "("
      KEYWORD@67..73 "memory"
      WHITESPACE@73..74 " "
      ERROR@74..77 "i32"
      R_PAREN@77..78 ")"
    WHITESPACE@78..79 "\n"
    R_PAREN@79..80 ")"
  WHITESPACE@80..81 "\n"

error: expected memory type
  ┌─ memory-malformed.wat:2:10
  │
2 │   (memory)
  │          ^

error: expected unsigned integer
  ┌─ memory-malformed.wat:3:11
  │
3 │   (memory "")
  │           ^^

error: unexpected token
  ┌─ memory-malformed.wat:3:11
  │
3 │   (memory "")
  │           ^^

error: unexpected token
  ┌─ memory-malformed.wat:4:12
  │
4 │   (memory ())
  │            ^

error: invalid address type
  ┌─ memory-malformed.wat:5:11
  │
5 │   (memory f32 0)
  │           ^^^

error: unexpected token
  ┌─ memory-malformed.wat:6:11
  │
6 │   (memory i32)
  │           ^^^
